--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "@segment/analytics.js-core": "^3.0.0",
     "@segment/analytics.js-integration-tester": "^3.1.1",
     "@segment/clear-env": "^2.1.0",
-    "browserify": "13.0.0",
+	"@segment/eslint-config": "^3.1.1",
+    "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
+    "eslint": "^2.9.0",
+    "eslint-plugin-mocha": "^2.2.0",
+    "eslint-plugin-require-path-exists": "^1.1.5",
     "istanbul": "^0.4.5",
     "karma": "1.3.0",
     "karma-browserify": "^5.1.1",
@@ -38,15 +42,11 @@
     "mocha": "^3.3.0",
     "npm-check": "^5.4.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "standard": "^10.0.2",
     "watchify": "^3.9.0"
   },
   "dependencies": {
-    "@segment/analytics.js-integration": "^3.2.0"
-  },
-  "standard": {
-    "env": [
-      "mocha"
-    ]
+    "@segment/analytics.js-integration": "^3.2.0",
+    "reject": "0.0.1",
+    "use-https": "^0.1.1"
   }
 }
