--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@segment/analytics.js-core": "^3.0.0",
     "@segment/analytics.js-integration-tester": "^3.1.1",
     "@segment/clear-env": "^2.1.0",
-	"@segment/eslint-config": "^3.1.1",
+    "@segment/eslint-config": "^3.1.1",
     "browserify": "^13.0.0",
     "browserify-istanbul": "^2.0.0",
     "eslint": "^2.9.0",
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "@segment/analytics.js-integration": "^3.2.0",
+    "do-when": "^1.0.0",
     "reject": "0.0.1",
     "use-https": "^0.1.1"
   }
